--- a/JS Variables/js_variable_increment.html
+++ b/JS Variables/js_variable_increment.html
@@ -8,13 +8,43 @@
 <body>
     <p>Cart Quantity</p>
     <button onclick="console.log(`Cart Quantity: ${q}`);">Show Quantity</button>
-    <button onclick="q++; console.log(`Cart Quantity: ${q}`);">Add to Cart</button> <!-- q++ == q += 1 -->
-    <button onclick="q += 3; console.log(`Cart Quantity: ${q}`);">+3</button>
-    <button onclick="q += 2; console.log(`Cart Quantity: ${q}`);">+2</button>
+    <button onclick="
+        if (q < 10) {
+            q++; 
+            console.log(`Cart Quantity: ${q}`); }
+    ">Add to Cart</button> <!-- q++ == q += 1 -->
+
+    <button onclick="
+        if (q < 10 && q+3 <= 10) {
+            q += 3; 
+            console.log(`Cart Quantity: ${q}`); }
+    ">+3</button>
+
+    <button onclick="
+        if (q < 10 && q+2 <= 10) {
+            q += 3; 
+            console.log(`Cart Quantity: ${q}`); }
+    ">+2</button>
+
     <button onclick="q = 0; console.log('Cart was reset'); console.log(`Cart Quantity: ${q}`);">Reset Cart</button>
-    <button onclick="q--; console.log(`Cart Quantity: ${q}`);">Remove from Cart</button> <!-- q-- == q -= 1 -->
-    <button onclick="q -= 3; console.log(`Cart Quantity: ${q}`);">-3</button>
-    <button onclick="q -= 2; console.log(`Cart Quantity: ${q}`);">-2</button>
+
+    <button onclick="
+        if (q > 0) {
+            q--; 
+            console.log(`Cart Quantity: ${q}`); }
+    ">Remove from Cart</button> <!-- q-- == q -= 1 -->
+
+    <button onclick="
+        if (q > 0 && q-3 >= 0) {
+            q -= 3; 
+            console.log(`Cart Quantity: ${q}`); }
+    ">-3</button>
+
+    <button onclick="
+        if (q > 0 && q-2 >= 0) {
+            q -= 2; 
+            console.log(`Cart Quantity: ${q}`); }
+    ">-2</button>
 
     <script>
         let q = 0;
