--- a/JS Variables/js_calculator.html
+++ b/JS Variables/js_calculator.html
@@ -6,14 +6,19 @@
     <title>Calculator</title>
 </head>
 <body>
-    <button onclick="calculation += '1'; console.log(calculation)" >1</button>
-    <button onclick="calculation += '2'; console.log(calculation)">2</button>
-    <button onclick="calculation += '3'; console.log(calculation)">3</button>
-    <button onclick="calculation += ' + '; console.log(calculation)">+</button>
+    <button onclick="updateCalculation('1')" >1</button>
+    <button onclick="updateCalculation('2')">2</button>
+    <button onclick="updateCalculation('3')">3</button>
+    <button onclick="updateCalculation('+')">+</button>
     <button onclick="console.log(eval(calculation))">=</button>
 
     <script>
         let calculation = "";
+
+        function updateCalculation(value) {
+            calculation += value;
+            console.log(calculation);
+        }
     </script>
 </body>
 </html>
