learned js asyncronus programming and added auto play feature in my rock paper scissors code

--- a/Rock Paper Scissors/rock_paper_scissors.html
+++ b/Rock Paper Scissors/rock_paper_scissors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="styles/DOM&CSS.css">
+    <link rel="stylesheet" href="./rock_paper_scissors.css">
 </head>
 <body>
     <div class="main">
@@ -29,10 +29,12 @@
         </p>
         <p class="js-score"></p>
 
-        <button onclick="resetScore()" class="css-reset-button">Reset Score</button>
+        <button onclick="resetScore()" class="css-button">Reset Score</button>
+
+        <button onclick="autoPlay()" class="css-button js-autoplay">Auto Play</button>
     </div>
 
-    <script src="scripts/DOM&CSS.js"></script>
+    <script src="./rock_paper_scissors.js"></script>
 
 </body>
 </html>
